# fastconstmap

./: LICENSE  MANIFEST.in  README.md  pyproject.toml  setup.py
.github/workflows/: buildwheels.yml  test.yml
benchmarks/: benchmark.py
examples/: example.py
fastconstmap/: __init__.py  _fastconstmap.pyi
src/: constmap.c  constmap.h  fastconstmap_module.c
tests/: test_constmap.py
