[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fastconstmap"
version = "0.7.0"
description = "Fast, immutable, compact map from strings to uint64 (binary fuse filter)."
readme = "README.md"
license = { text = "Apache-2.0" }
authors = [{ name = "Daniel Lemire", email = "daniel@lemire.me" }]
requires-python = ">=3.8"
classifiers = [
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: C",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[project.urls]
Homepage = "https://github.com/lemire/fastconstmap"
Source   = "https://github.com/lemire/fastconstmap"

[tool.setuptools]
packages = ["fastconstmap"]

[tool.setuptools.package-data]
fastconstmap = ["py.typed"]

[tool.cibuildwheel]
# Build wheels for all platforms. Test the freshly-built wheel against
# our pytest suite — catches packaging regressions before they ship.
test-requires = "pytest"
test-command = "pytest {project}/tests"

[tool.cibuildwheel.macos]
archs = ["x86_64", "universal2", "arm64"]

[tool.cibuildwheel.linux]
# "auto64" = the runner's native 64-bit arch (no 32-bit i686). The wheels
# workflow runs this on both an x86_64 runner and an aarch64 runner, so
# this produces x86_64 and aarch64 manylinux wheels — each built natively.
archs = ["auto64"]

[tool.cibuildwheel.windows]
archs = ["AMD64"]
